@startuml

Title Ejercicio Final Cabina Peajes

class Autopista {
	List<EstacionPeaje> estaciones
}

class EstacionPeaje {
	Long id
	String descripcion
	List<Cabina> cabinas
	<static> dameHoraActual()
}

note right of EstacionPeaje::dameHoraActual
devuelve la hora del momento en el que se invoca
devolver un valor entre 0 y 23
end note

class Cabina {
	Long id
	MedioPago medioPago
	List<Registro> registros

	+ cobrar(Vehiculo) : Double

}
note left of Cabina::cobrar
En el método cobrar para un vehículo, primero crea el Registro,
luego ejecuta el método cobrar del registro (registro.cobrar() )
y por último lo agrega a la lista de registros
end note

abstract class MedioPago {
	String descripcion

	{abstract} getDescuento()

}

class Sube {
	Integer diasDemora

	getDescuento()
}
note bottom of Sube
Descuento:
En el caso de la tarjeta SUBE es un 10%
end note


class Pase {
	Integer diasDemora

	getDescuento()
}
note bottom of Pase
Descuento:
En el caso del PASE, se obtiene un 15% de descuento
si la demora es menor a 5 días, sino un 12%.
end note

class Efectivo {
	getDescuento()
}
note bottom of Efectivo
Descuento:
En el caso del medio de pago efectivo,
por el momento no ofrece descuento, pero
en un futuro puede llegar a hacerlo.
end note

class Vehiculo {
	String patente
	CategoriaVehiculo categoriaVehiculo
}

enum CategoriaVehiculo {
	AUTO(10)
	CAMION(20)
	MOTO(5)

	- Double tarifa

	- CategoriaVehiculo(Double tarifa)

	+ getTarifa():Double
}


class Registro {
	Vehiculo vehiculo
	Integer hora

	+ Registro(vehiculo)

	+ cobrar() : Double
}
note right of Registro
Al construir una instancia de Registro solo necesitamos el vehículo
porque la hora lo obtenemos de Estacion.dameHoraActual()
end note

note left of Registro::cobrar
Si pasa por la cabina entre las 6 y las 10hs o las 17 y las 20hs
se considera que es horario pico y tendrá un incremento del 8%
sobre la tarifa.
Finalmente, según el medio de pago, se computarán los descuentos
correspondientes, resultando en el importe final a cobrar.
end note


'abstract class Vehiculo1 {
'	String Patente
'	{abstract} getTarifa
'}

'class Auto {
'	TARIFA = 10
'	getTarifa
'}

'class Camion {
'	TARIFA = 20
'	getTarifa
'}

'class Moto {
'	TARIFA = 5
'	getTarifa
'}

'Vehiculo1 <|-- Auto
'Vehiculo1 <|-- Camion
'Vehiculo1 <|-- Moto



Autopista "1" --right "1..*" EstacionPeaje
EstacionPeaje "1" -- "1..*" Cabina
Cabina "1" --right  "1" MedioPago

MedioPago <|-- Sube
MedioPago <|-- Pase
MedioPago <|-- Efectivo

Cabina "1" -- "1..*" Registro
Registro "1" -- "1" Vehiculo

Vehiculo -- CategoriaVehiculo
@enduml
